# video-compare-pyqt-opencv

./: .pre-commit-config.yaml  main.py  pyproject.toml
