# pyproject.toml

[project]
name = "video-compare-pyqt-opencv"
version = "0.1.0"
description = "A video comparison application with side-by-side and overlay modes using PyQt6 and OpenCV."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "PyQt6>=6.5",                 # PyQt6 for the GUI
    "opencv-python>=4.8",          # OpenCV for video handling
    "opencv-python-headless>=4.8", # Optional for environments without GUI
    "numpy>=1.24",                 # Used internally by OpenCV
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",  # Incorrect version
    "mypy>=1.14.0", # Static type checker
    "pre-commit",   # Pre-commit hooks management
    "pytest",       # Testing framework
    "pytest-qt",    # Testing for PyQt applications
]

# ==============================
# Ruff Configuration
# ==============================
[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["E203", "D203", "D212", "ISC001", "COM812"]
line-length = 88
exclude = ["build/", "dist/", ".venv/"]

# ==============================
# Mypy Configuration
# ==============================
[tool.mypy]
python_version = 3.12
strict = true
ignore_missing_imports = true
files = "video_compare/**/*.py"

# ==============================
# Pytest Configuration
# ==============================
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-v"

# ==============================
# Coverage Configuration
# ==============================
[tool.coverage.run]
branch = true
source = ["video_compare"]
omit = ["tests/*", "setup.py"]
